--- a/2 semestre/PRINCIPAL/web/web-app/Views/Produto/Index.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Produto/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<web_app.Models.Produto>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Zequinha's Lanches";
 }
 
-<h1>Index</h1>
+<h1>Zequinha's Lanches</h1>
 
 <p>
     <a asp-action="Create">Novo Produto</a>
