--- a/2 semestre/PRINCIPAL/web/web-app/Views/Produto/Create.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Produto/Create.cshtml
@@ -8,15 +8,15 @@
 
 <h4>Produto</h4>
 <hr />
-<div class="row g-3">
-    <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+<div class="row">
+    <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+        @*    <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
                 <input asp-for="Id" class="form-control" />
                 <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
