--- a/2 semestre/PRINCIPAL/web/web-app/Views/Produto/Edit.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Produto/Edit.cshtml
@@ -12,15 +12,20 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+       @*     <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
                 <input asp-for="Id" class="form-control" />
                 <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="urlImagem" class="control-label"></label>
+                <input asp-for="urlImagem" class="form-control" type="file" />
+                <span asp-validation-for="urlImagem" class="text-danger img-fluid"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Descricao" class="control-label"></label>
@@ -31,11 +36,6 @@
                 <label asp-for="Preco" class="control-label"></label>
                 <input asp-for="Preco" class="form-control" />
                 <span asp-validation-for="Preco" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="urlImagem" class="control-label"></label>
-                <input asp-for="urlImagem" class="form-control" />
-                <span asp-validation-for="urlImagem" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
