--- a/2 semestre/PRINCIPAL/web/web-app/Views/Shared/_Layout.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Shared/_Layout.cshtml
@@ -60,8 +60,8 @@
     </div>
 
     <footer class="footer text-muted">
-        <div class="container fixed-bottom">
-            &copy; 2023 - web_app - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container fixed-bottom ">
+            &copy; 2023 - RangoTop -
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
