--- a/2 semestre/PRINCIPAL/web/web-app/wwwroot/css/site.css
+++ b/2 semestre/PRINCIPAL/web/web-app/wwwroot/css/site.css
@@ -2,6 +2,12 @@ html {
     font-size: 14px;
 }
 
+.footer text-muted {
+    text-align: center;
+    font-size: 23px;
+    color: black;
+}
+
 @media (min-width: 768px) {
     html {
         font-size: 16px;
