--- a/2 semestre/PRINCIPAL/web/web-app/Views/Login/Create.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Login/Create.cshtml
@@ -45,7 +45,7 @@
                     <span asp-validation-for="Senha" class="text-danger"></span>
                 </div>
                 <div class="form-group m-3">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <input type="submit" value="Criar Novo" class="btn btn-primary" />
                 </div>
             </form>
     <div class="mt-3">
