--- a/2 semestre/PRINCIPAL/web/web-app/Views/Login/Login.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Login/Login.cshtml
@@ -36,9 +36,9 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Senha" class="control-label"></label>
-                        <input type="password" id="senha" class="form-control" required />
-                        @*<input asp-for="Senha" class="form-control" id="senha" required />*@
-                    <input type="checkbox" onclick="mostrarOcultarSenha()" /> Mostrar senha
+                        @*<input type="password" id="senha" class="form-control" required />*@
+                        <input asp-for="Senha" class="form-control" id="senha" required />
+                    <input type="checkbox" onclick="mostrarOcultarSenha()" /> Ocultar senha?
                         <div class="valid-feedback">
                             Parece bom!
                         </div>
