--- a/2 semestre/PRINCIPAL/web/web-app/Views/Postagem/Index.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Postagem/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<web_app.Models.Postagem>
 
 <p>
-    <a asp-action="Create">Nova Postagem</a>
+    <a asp-action="Create"><button>Nova Postagem</button></a>
 </p>
 <div class="container">
     <div class="container-fluid">
@@ -35,7 +35,7 @@
             </div>
             @* @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }," ?|||| ")
         ;*@
-            @Html.ActionLink("Excluir", "Delete", new { id = item.Id })
+            @Html.ActionLink("Excluir", "Delete", new { id = item.Id })<button>Excluir</button>
             ;
         }
     </div>
