--- a/2 semestre/PRINCIPAL/web/web-app/Views/Shared/_Layout.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Shared/_Layout.cshtml
@@ -60,8 +60,8 @@
     </div>
 
     <footer class="footer text-muted">
-        <div class="container fixed-bottom ">
-            &copy; 2023 - RangoTop -
+        <div class="container fixed-bottom"> 
+            &copy; 2023 - RangoTop - Lucas / Adriano / Caio / Felipe 
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
