Alteração dos Botões

--- a/2 semestre/PRINCIPAL/web/web-app/Views/Login/Login.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Login/Login.cshtml
@@ -49,7 +49,7 @@
                     </div>
                     <div class="form-group mt-3 ">
                     <input type="submit" value="Logar" class="btn btn-primary m-2" style="width:110px;" />
-                    <a class="btn btn-primary m-2" style="width:110px;" asp-area="" asp-controller="Login" asp-action="Create">Criar conta</a>
+                    <a class="btn btn-primary m-2" style="width:110px;" asp-area="" asp-controller="Login" asp-action="Create">Criar Conta</a>
                     </div>
             
             </form>
