--- a/2 semestre/PRINCIPAL/web/web-app/Views/Login/Create.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Login/Create.cshtml
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-    <div class="container">
+    <div class="cadastro">
     <h4>Login</h4>
     <hr />
             <form asp-action="Create" class="needs-validation" novalidate>
@@ -45,7 +45,7 @@
                     <span asp-validation-for="Senha" class="text-danger"></span>
                 </div>
                 <div class="form-group m-3">
-                    <input type="submit" value="Criar Novo" class="btn btn-primary" />
+                    <input type="submit" value="Criar " class="btn btn-primary" />
                 </div>
             </form>
     <div class="mt-3">
