--- a/2 semestre/PRINCIPAL/web/web-app/Views/Produto/Edit.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Produto/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model web_app.Models.Produto
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
 <h1>Edit</h1>
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Editar">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
        @*     <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
