--- a/2 semestre/PRINCIPAL/web/web-app/Views/Produto/Index.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Produto/Index.cshtml
@@ -16,7 +16,7 @@
 @if (ViewBag.id == 1)
 {
     <p>
-    <a asp-action="Create"><button>Novo Produto</button></a>
+        <a asp-action="Create"><input type="submit" value="Novo Produto" class=" btn btn-primary"></a>
 </p>
 }
 @*<table class="table">
@@ -67,8 +67,8 @@
                     }
                 </div>
                 @if (ViewBag.id == 1){
-                <button>@Html.ActionLink("Editar", "Edit", new {id=item.Id}, new {style = "text-decoration: none"})</button>
-                <button>@Html.ActionLink("Excluir", "Delete", new {id=item.Id},new {style = "text-decoration: none"})</button>
+                    @Html.ActionLink("Editar", "Edit", new { id = item.Id }, new {@class="btn btn-primary"});
+                    @Html.ActionLink("Excluir", "Delete", new { id = item.Id }, new {@class="btn btn-primary"});
                 }
             </div>
         }
