--- a/2 semestre/PRINCIPAL/web/web-app/wwwroot/css/site.css
+++ b/2 semestre/PRINCIPAL/web/web-app/wwwroot/css/site.css
@@ -2,12 +2,6 @@ html {
     font-size: 14px;
 }
 
-.footer text-muted {
-    text-align: center;
-    font-size: 23px;
-    color: black;
-}
-
 @media (min-width: 768px) {
     html {
         font-size: 16px;
@@ -45,4 +39,18 @@ body {
 
 body div ul li {
     padding: 10px;
+}
+
+.cadastro {
+    width: 350px;
+    margin: auto;
+    margin-top: 10%;
+    padding: 8px;
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+    background-color: rgba(112, 112, 112, 0.1);
+    border-radius: 20px;
+    border: 1px solid rgb(145, 144, 144);
+    border-radius: 20px;
+    padding-right: 5%;
 }
