--- a/2 semestre/PRINCIPAL/web/web-app/Views/Login/Create.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Login/Create.cshtml
@@ -17,10 +17,10 @@
 </head>
 <body>
 
-    <div class="cadastro">
-    <h4>Login</h4>
+    <div class="cadastro ">
+    <h4>Cadastre-se</h4>
     <hr />
-            <form asp-action="Create" class="needs-validation" novalidate>
+            <form asp-action="Create" class="needs-validation " novalidate>
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Usuario" class="control-label">Email</label>
@@ -44,13 +44,11 @@
                     </div>
                     <span asp-validation-for="Senha" class="text-danger"></span>
                 </div>
-                <div class="form-group m-3">
-                    <input type="submit" value="Criar " class="btn btn-primary" />
-                </div>
+            <div class="form-group mt-3 ">
+                <input type="submit" value="Criar Conta" class="btn btn-primary m-2" style="width:110px;" />
+                <a class="btn btn-primary m-2" style="width:110px;" asp-area="" asp-controller="" asp-action="">Entrar</a>
+            </div>
             </form>
-    <div class="mt-3">
-        <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">Voltar ao login</a>
-    </div>
         </div>
 
 
