--- a/2 semestre/PRINCIPAL/web/web-app/Views/Produto/Edit.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Produto/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Editar";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
 <h4>Produto</h4>
 <hr />
@@ -37,15 +37,12 @@
                 <input asp-for="Preco" class="form-control" />
                 <span asp-validation-for="Preco" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group m-3 ">
+                <input type="submit" value="Salvar" class="btn btn-primary mx-5" />
+                <a asp-action="Index" class="btn btn-primary">Voltar</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
