--- a/2 semestre/PRINCIPAL/web/web-app/Views/Shared/_Layout.cshtml
+++ b/2 semestre/PRINCIPAL/web/web-app/Views/Shared/_Layout.cshtml
@@ -59,10 +59,8 @@
         </main>
     </div>
 
-    <footer class="footer text-muted">
-        <div class="container fixed-bottom"> 
-            &copy; 2023 - RangoTop - Lucas / Adriano / Caio / Felipe 
-        </div>
+    <footer class="footer text-center fs-5">
+            &copy; 2023 - RangoTop - Lucas / Adriano / Caio / Felipe
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
